--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -208,3 +208,10 @@ ja:
       long: "%Y/%m/%d %H:%M"
       short: "%m/%d %H:%M"
     pm: 午後
+  enums:
+    post:
+      category:
+        worry: "お悩み相談"
+        daily: "日常の投稿"
+        friend: "友達づくり"
+
